Improved project structure and added a class that executes every day's solution