@@ -4,19 +4,19 @@ import java.util.ArrayList;
 import java.util.List;
 
 public class RuckSackGroup {
-	private final List<String> ruckSacks = new ArrayList<>();
+	private final List<RuckSack> ruckSacks = new ArrayList<>();
 
-	public RuckSackGroup(String r1, String r2, String r3) {
+	public RuckSackGroup(RuckSack r1, RuckSack r2, RuckSack r3) {
 		ruckSacks.add(r1);
 		ruckSacks.add(r2);
 		ruckSacks.add(r3);
 	}
 
 	public int getRuckSackPriorityNumber() {
-		for (char c : ruckSacks.get(0).toCharArray()) {
+		for (char c : ruckSacks.getFirst().getItems().toCharArray()) {
 			boolean hasCharacter = true;
 			for (int i = 1; i < ruckSacks.size(); i++) {
-				if (!ruckSacks.get(i).contains(String.valueOf(c))) {
+				if (!ruckSacks.get(i).getItems().contains(String.valueOf(c))) {
 					hasCharacter = false;
 					break;
 				}
